# research_trend_bot

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  feedback_summary.json  interests.example.yaml  interests.yaml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: feedback_negative.yml  feedback_positive.yml
.github/workflows/: daily_digest.yml  feedback_summary.yml
src/research_trend_bot/: analyzer.py  config.py  email_builder.py  feedback.py  feedback_cli.py  fetcher.py  hf_fetcher.py  main.py  models.py  scorer.py  sender.py
src/research_trend_bot/prompts/: analysis.py  feedback_summary.py  scoring.py
src/research_trend_bot/templates/: newsletter.html
templates/: newsletter.html
